resolução dos exercícios da aula

--- a/exercicio3/sugestao.html
+++ b/exercicio3/sugestao.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Sugestão de clima</title>
-</head>
+  </head>
 
-<body>
-    <div class="a">
-        <h1><a href="./index.html">Simulador de Climas</a></h1>
-    </div>
-    <div class="b">
-        <div class="c">
-
-<!-- Seu formukário aqui!-->
-        </div>
-
-    </div>
-    <div class="e">Footer</div>
-
-</body>
-
+  <body>
+    <header class="a">
+      <h1><a href="./index.html">Simulador de Climas</a></h1>
+    </header>
+    <main class="b">
+      <form class="c">
+        <!-- Seu formukário aqui!-->
+        <p>
+          <label for="nome">Nome:</label>
+          <input type="text" name="nome" id="nome" />
+        </p>
+        <p>
+          <label for="e-mail">E-mail:</label>
+          <input type="text" name="e-mail" id="e-mail" />
+        </p>
+        <p>
+          <label for="sugestao">Sugestão de Clima:</label>
+          <input type="text" name="sugestao" id="sugestao" />
+        </p>
+        <button type="submit" id="submit" name="submit" id="submit">
+          Enviar
+        </button>
+      </form>
+    </main>
+    <footer class="e">Footer</footer>
+  </body>
 </html>
