--- a/exercicio3/sugestao.html
+++ b/exercicio3/sugestao.html
@@ -21,7 +21,12 @@
         </p>
         <p>
           <label for="e-mail">E-mail:</label>
-          <input type="text" name="e-mail" id="e-mail" />
+          <input
+            type="email"
+            name="e-mail"
+            id="e-mail"
+            placeholder="exemplo@exemplo.com"
+          />
         </p>
         <p>
           <label for="sugestao">Sugestão de Clima:</label>
